Fixed spacing issue of skillset stars for portrait tablets.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -272,6 +272,33 @@ div.mean-flex-box div img {
   height: auto;
 }
 
+#sticky-profile {
+  box-sizing: border-box;
+  background: #EF861B;
+  width: 100%;
+  padding: 15px;
+  padding-left: 0px;
+  text-align: center;
+}
+
+#sticky-experience {
+  box-sizing: border-box;
+  background: #FFF;
+  width: 100%;
+  padding: 15px;
+  padding-left: 0px;
+  text-align: center;
+}
+
+#sticky-skillset {
+  box-sizing: border-box;
+  background: #F00;
+  width: 100%;
+  padding: 15px;
+  padding-left: 0px;
+  text-align: center;
+}
+
 #professional-experience .experience {
   margin-bottom: 20px;
 }
@@ -555,6 +582,12 @@ img.job-icon {
   #skillController {
     padding: 0px 75px;
   }
+
+  div.col-sm-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
   .square {
     margin-right: 0.25em;
   }
@@ -609,6 +642,14 @@ img.job-icon {
   }
   #profile {
     display: block;
+  }
+
+  .job-square {
+    height: 4em;
+    width: 4em;
+  }
+  #job-role, #job-company, #job-tenure {
+    font-size: 9pt;
   }
   div.social-link a i {
     font-size: 3em;
